--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,9 @@ function showAllGifts() {
                    let addBtn = document.createElement("button");
                    addBtn.type = "button";
                    addBtn.innerText = "Add";
-                   addBtn.setAttribute("data-product_id", giftObj["gift_id"]);
+                   addBtn.setAttribute("data-gift-id", giftObj["gift_id"]);
+                   addBtn.setAttribute("data-gift-name", giftObj["name"]);
+                   addBtn.onclick = addGift;
 
                    row.appendChild(nameCell);
                    row.appendChild(brandCell);
@@ -141,6 +143,39 @@ function showWeddingList() {
     };
     xhr.open("GET", "/api/v1/wedding-list");
     xhr.send();
+}
+
+function addGift(e) {
+    let giftName = e.target.getAttribute("data-gift-name");
+    let ok = confirm("Are you sure you want to add to the weeding list the" +
+        " gift: " + giftName+"?");
+
+    if (!ok) {
+        return;
+    }
+
+    let xhr = new XMLHttpRequest();
+    let formData = new FormData();
+    let csrftoken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
+
+    let giftID = e.target.getAttribute("data-gift-id");
+    let userID = "{{ request.user.id }}";
+
+    xhr.onreadystatechange = function() {
+        if (xhr.readyState === XMLHttpRequest.DONE){
+            if (xhr.status === 200) {
+                window.location = "/";
+            } else {
+                let obj = JSON.parse(xhr.response);
+                alert(obj["message"]);
+            }
+        }
+    };
+    formData.append("gift_id", giftID);
+    formData.append("user_id", userID);
+    xhr.open("POST", "/api/v1/wedding-list");
+    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+    xhr.send(formData);
 }
 
 </script>
