--- a/templates/home.html
+++ b/templates/home.html
@@ -73,8 +73,8 @@ function showAllGifts() {
                    addBtn.innerText = "Add";
                    addBtn.setAttribute("data-gift-id", giftObj["gift_id"]);
                    addBtn.setAttribute("data-gift-name", giftObj["name"]);
-                   addBtn.onclick = addGift;
                    addBtn.style.cursor = "pointer";
+                   addBtn.onclick = addGift;
 
                    row.appendChild(nameCell);
                    row.appendChild(brandCell);
@@ -128,8 +128,10 @@ function showWeddingList() {
                    let removeBtn = document.createElement("button");
                    removeBtn.type = "button";
                    removeBtn.innerText = "remove";
-                   removeBtn.setAttribute("data-product_id", giftObj["gift_id"]);
+                   removeBtn.setAttribute("data-gift-id", giftObj["gift_id"]);
+                   removeBtn.setAttribute("data-gift-name", giftObj["name"]);
                    removeBtn.style.cursor = "pointer";
+                   removeBtn.onclick = removeGift;
 
                    row.appendChild(nameCell);
                    row.appendChild(brandCell);
@@ -167,15 +169,52 @@ function addGift(e) {
         if (xhr.readyState === XMLHttpRequest.DONE){
             if (xhr.status === 200) {
                 window.location = "/";
-            } else {
+            } else if (xhr.status === 400){
                 let obj = JSON.parse(xhr.response);
                 alert(obj["message"]);
+            } else {
+                alert(xhr.responseText)
             }
         }
     };
     formData.append("gift_id", giftID);
     formData.append("user_id", userID);
     xhr.open("POST", "/api/v1/wedding-list");
+    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+    xhr.send(formData);
+}
+
+function removeGift(e) {
+    let giftName = e.target.getAttribute("data-gift-name");
+    let ok = confirm("Are you sure you want to remove from the weeding list the" +
+        " gift: " + giftName+"?");
+
+    if (!ok) {
+        return;
+    }
+
+    let xhr = new XMLHttpRequest();
+    let formData = new FormData();
+    let csrftoken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
+
+    let giftID = e.target.getAttribute("data-gift-id");
+    let userID = "{{ request.user.id }}";
+
+    xhr.onreadystatechange = function() {
+        if (xhr.readyState === XMLHttpRequest.DONE){
+            if (xhr.status === 200) {
+                window.location = "/";
+            } else if (xhr.status === 400){
+                let obj = JSON.parse(xhr.response);
+                alert(obj["message"]);
+            } else {
+                alert(xhr.responseText)
+            }
+        }
+    };
+    formData.append("gift_id", giftID);
+    formData.append("user_id", userID);
+    xhr.open("DELETE", "/api/v1/wedding-list");
     xhr.setRequestHeader("X-CSRFToken", csrftoken);
     xhr.send(formData);
 }
