starts adding guest html and view and functionality

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Wedding List</title>
     <link href="{% static '/css/weddinglist.css' %}" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -24,6 +24,7 @@
     </div>
     <div style="margin-left: 50%">
         <span><strong>wedding list:</strong></span>
+        <a href="/add-guest">Add guest</a>
         <br>
         <br>
         <table id="weddingListTable">
