--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -15,8 +15,8 @@
     <ul class="errorlist"><li>Wrong credential, please try again.</li></ul>
 {% endif %}
 
-<label for="{{ form.username.id_for_label }}">Usuario</label>
-<input class="form-control" type="text" name="{{ form.username.html_name }}" placeholder="Usuario" id="{{ form.username.id_for_label }}">
+<label for="{{ form.username.id_for_label }}">Username</label>
+<input class="form-control" type="text" name="{{ form.username.html_name }}" placeholder="Username" id="{{ form.username.id_for_label }}">
 
 <label for="{{ form.password.id_for_label }}">Password:</label>
 <input type="password" name="{{ form.password.html_name }}" placeholder="Password" id="{{ form.password.id_for_label }}">
