adds functionality to print reports in pfd

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,11 @@
     </div>
     <div style="margin-left: 50%">
         <span><strong>wedding list:</strong></span>
-        <a href="/add-guest">Add guest</a>
+        <br>
+        <br>
+        <a style="outline: none"  href="/add-guest">Add guest</a>
+        <br>
+        <a style="outline: none" download href="/api/v1/reports">Get report</a>
         <br>
         <br>
         <strong>Guests:</strong>
